--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -3,12 +3,12 @@
     <div>
         <div class="task" *ngFor="let t of tasks">
             <div>
-            <mat-checkbox [(ngModel)]="t.done" (ngModelChange)="updateDone(t)">
-                {{ t.name }}
-                
-            </mat-checkbox>
-            <p class="desc">{{ t.description }}</p>
-        </div>
+                <mat-checkbox [(ngModel)]="t.done" (ngModelChange)="updateDone(t)">
+                    {{ t.name }}
+
+                </mat-checkbox>
+                <p class="desc">{{ t.description }}</p>
+            </div>
             <div>
                 <button (click)="deleteTask(t.id)">
                     <mat-icon fontIcon="delete" color="white"></mat-icon>
@@ -19,7 +19,7 @@
             </div>
         </div>
     </div>
-    <button class="add">
+    <button class="add" (click)="openAdd()">
         Add
     </button>
 </div>
