--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -3,18 +3,18 @@
     <div>
         <div class="task" *ngFor="let t of tasks">
             <div>
-                <mat-checkbox [(ngModel)]="t.done" (ngModelChange)="updateDone(t)">
+                <mat-checkbox [(ngModel)]="t.done" (ngModelChange)="updateTask(t)">
                     {{ t.name }}
 
                 </mat-checkbox>
                 <p class="desc">{{ t.description }}</p>
             </div>
             <div>
-                <button (click)="deleteTask(t.id)">
-                    <mat-icon fontIcon="delete" color="white"></mat-icon>
+                <button class="b" (click)="deleteTask(t.id)">
+                    <mat-icon fontIcon="delete" [ngStyle]="{'color':'#1E1E1E'}"></mat-icon>
                 </button>
-                <button (click)="editTask(t.id)">
-                    <mat-icon fontIcon="edit"></mat-icon>
+                <button class="b"(click)="openEdit(t)">
+                    <mat-icon fontIcon="edit" [ngStyle]="{'color':'#1E1E1E'}"></mat-icon>
                 </button>
             </div>
         </div>
