--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #16161d;}
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-color: #121212;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    font-family: 'Quicksand', sans-serif;
+}
